--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,10 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.CodeScannerGoStyle" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/secondary</item>
         <item name="colorPrimaryVariant">@color/secondary</item>
-        <item name="colorOnPrimary">@color/main</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorSecondaryVariant">@color/secondary</item>
@@ -13,7 +14,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/secondary</item>
         <item name="android:forceDarkAllowed">false</item>
         <item name="navigationIcon">@color/secondary</item>
+
         <item name="android:navigationBarColor">@color/main</item>
-        <!-- Customize your theme here. -->
     </style>
 </resources>
